[package]
name = "leveldb-rust"
version = "0.1.0"
authors = ["FateTHarlaown <623239185@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
crc32fast = "1.2.0"
byteorder = "1.3.2"
rand = "0.7.2"
snappy = "0.4.0"
lru = "0.5.0"
crossbeam-channel = "0.4"

